fix(web): removed margin & padding from everything
The margin and padding were taking up space at the top of the screen, pushing the body down and adding scrollbars

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,15 +1,18 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	width: 100vw;
 	height: 100vh;
-	margin: 0;
-	padding: 0;
 
 	user-select: none;
 }
 
 #root {
-	height: 100%;
 	width: 100%;
+	height: 100%;
 
 	background-size: cover;
 	background-repeat: no-repeat;
